# Grumpy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-FAQ.md  Makefile  README.md  SECURITY.md  TODO.md  codecov.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: README.md  _bench_common.py  _open_epoch.py  _ragged_bench.py  benchmark_awkward_elementwise.py  benchmark_compile.py  benchmark_compile_suite.py  benchmark_elementwise.py  benchmark_gpu_knn.py  benchmark_indexing.py  benchmark_load_vs_open.py  benchmark_memory_vs_stream.py  benchmark_neighbors.py  benchmark_protein_pipeline.py  benchmark_ragged_api.py  benchmark_ragged_kernels.py  benchmark_ragged_suite.py  benchmark_reductions.py  benchmark_setroutines.py  benchmark_sortsearch.py  benchmark_statistics.py  benchmark_streaming.py  benchmark_tier3.py  ci_smoke.py  generate_perf_charts.py  profile_stream_steps.py
docs/: api.md  arrays.md  compilation.md  dataframes.md  developer.md  dtypes.md  errors.md  getting-started.md  gpu-acceleration.md  hooks.py  index.md  io-streaming.md  license-faq.md  saving-loading.md
docs/overrides/: main.html
docs/stylesheets/: imaginary.css
python/grumpy/: __init__.py  _docinit.py  _docinject.py  _docutil.py  compiler.py  errors.py  stream.py
src/: cast.rs  compare.rs  dataframe.rs  dataframe_indexing.rs  dtype.rs  einsum.rs  error.rs  hist.rs  io.rs  io_cache.rs  kernels.rs  layout.rs  layout_map.rs  layout_ops.rs  lib.rs  linalg.rs  neighbors.rs  ops.rs  py_api.rs  random.rs  rect_array.rs  reduce.rs  setops.rs  sortsearch.rs  stats.rs  stream.rs  unary.rs  whereops.rs
src/geometry/: grid_pool.rs  mod.rs  pairwise.rs  points.rs
src/gpu/: auto.rs  knn.rs  knn_cuda.rs  knn_metal.rs  mod.rs
src/py_api/: bench.rs  binop.rs  cast.rs  compile.rs  convert.rs  dataframe.rs  indexing.rs  interop.rs  mod.rs  open.rs  py_io.rs  py_stream.rs  random.rs  types.rs
tests/: test_cast_matrix.py  test_compile.py  test_compile_expr_edges.py  test_compiler_coverage.py  test_compiler_remaining.py  test_dataframe_extended.py  test_dataframe_schema_indexing.py  test_dataframe_union.py  test_deep_ragged_and_nulls.py  test_errors.py  test_geometry.py  test_gpu_neighbors.py  test_interop.py  test_io_cache.py  test_milestone10_dataframes.py  test_milestone11_io.py  test_milestone12_parallel_apply.py  test_milestone1_basic_array.py  test_milestone2_constructors.py  test_milestone3_indexing.py  test_milestone4_mutability.py  test_milestone5_reshaping.py  test_milestone6_elementwise.py  test_milestone7_broadcasting.py  test_milestone8_comparisons.py  test_milestone8_einsum_tensordot.py  test_milestone8_histogram_bincount_digitize.py  test_milestone8_linalg.py  test_milestone8_logical.py  test_milestone8_reductions.py  test_milestone8_setroutines.py  test_milestone8_sorting_dim1.py  test_milestone8_sorting_searching.py  test_milestone8_statistics.py  test_milestone8_unary.py  test_milestone8_where_argwhere.py  test_milestone9_neighbors.py  test_neighbors_sklearn_parity.py  test_open.py  test_ops_all_dims.py  (+13 more)
tests/coverage/: conftest.py  test_compiler_exhaustive.py  test_compiler_final_coverage.py  test_compiler_last_lines.py  test_errors_and_init_coverage.py  test_python_package_coverage.py
(+33 files in other folders)
