[package]
name = "grumpy"
version = "0.0.0"
edition = "2021"

[lib]
name = "grumpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py310", "extension-module"] }
numpy = "0.22"
thiserror = "1.0"
half = { version = "2.4", features = ["std"] }
bitvec = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zarrs = "0.19"
zarrs_filesystem = "0.3"
rayon = "1.10"
kdtree = "0.7"

[profile.release]
lto = true
codegen-units = 1

