[package]
name = "grumpy"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[lib]
name = "grumpy"
crate-type = ["cdylib"]

[features]
default = []
cuda = ["dep:cudarc"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py310", "extension-module", "multiple-pymethods"] }
numpy = "0.22"
thiserror = "1.0"
half = { version = "2.4", features = ["std"] }
bitvec = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zarrs = "0.19"
zarrs_filesystem = "0.3"
rayon = "1.10"
kdtree = "0.7"
rustc-hash = "2.0"
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4"
cudarc = { version = "0.12", optional = true, features = ["driver", "nvrtc"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"

[profile.release]
lto = true
codegen-units = 1

[lints.clippy]
correctness = "warn"
suspicious = "warn"

