[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "grumpy"
version = "0.0.0"
description = "High-performance numerical computing on ragged data (Rust core, Python bindings)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Grumpy contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[tool.maturin]
python-source = "python"
module-name = "grumpy._core"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

